{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 120,
  "lineage": "fcbf1978-55b3-d3a3-7083-ac68afb0e243",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-16T04:37:02.723-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-316615/global/firewalls/rad-test-fw-allow-http",
            "log_config": [],
            "name": "rad-test-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/networks/rad-test-vpc",
            "priority": 1000,
            "project": "terraform-316615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/firewalls/rad-test-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-16T04:37:02.905-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-316615/global/firewalls/rad-test-fw-allow-https",
            "log_config": [],
            "name": "rad-test-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/networks/rad-test-vpc",
            "priority": 1000,
            "project": "terraform-316615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/firewalls/rad-test-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-06-16T04:37:02.987-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-316615/global/firewalls/rad-test-fw-allow-internal",
            "log_config": [],
            "name": "rad-test-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/networks/rad-test-vpc",
            "priority": 1000,
            "project": "terraform-316615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/firewalls/rad-test-fw-allow-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-16T04:37:02.891-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-316615/global/firewalls/rad-test-fw-allow-ssh",
            "log_config": [],
            "name": "rad-test-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/networks/rad-test-vpc",
            "priority": 1000,
            "project": "terraform-316615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/firewalls/rad-test-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210604",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-316615/zones/europe-west1-b/disks/rad-test-vm-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "rad-vm-3f20fe3a.rad.com",
            "id": "projects/terraform-316615/zones/europe-west1-b/instances/rad-test-vm-0",
            "instance_id": "4273128081983823006",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "dchasniuk:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCy/Tjv+hq9b1qKubLrh5gmVD2xc96DKrl4iti6DKDyNZCwAEfRjOeREyQcs+HRy/MO/atSDUVkj1V0H68fZPtNvXBQUKaxDcb8Ii/64HHrhikzAVwOLZQzYR11qC2oy+018TkTu4kpkIa7pqTVm1hu3GHzZrk2zy7M60JzJ9BaBhi5+zmDIAu+LMjUzq7ARJi9Eg0kOyp0Hu4+J40aoF5H3LV1pcwOwgr/yvEZYdvsys8leuC5dO5juUuqK1yT5MySAeL8vb4S/HKf/NmyoZtvXcRtp/1+IMINtBoGC5hPqcZQ1sBvOxxcDdBUgw110ombKU8a9j6GNVEvPaC4hqAbn7Jd8Zspdkm/OnW0G8gY8pweACjz6kUtKdxUD94CmOpaa5gn4E8b5YhxlVJObkUsxEd0ejUsfEnv76lx30G [...]
            },
            "metadata_fingerprint": "vcNt_6JstVc=",
            "metadata_startup_script": "sudo apt-get update",
            "name": "rad-test-vm-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.198.186",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/networks/rad-test-vpc",
                "network_ip": "10.10.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-316615/regions/europe-west1/subnetworks/rad-test-public-subnet-1",
                "subnetwork_project": "terraform-316615"
              }
            ],
            "project": "terraform-316615",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-316615/zones/europe-west1-b/instances/rad-test-vm-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "https",
              "ssh"
            ],
            "tags_fingerprint": "FeWfR_dobKY=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-316615/global/networks/rad-test-vpc",
            "mtu": 0,
            "name": "rad-test-vpc",
            "project": "terraform-316615",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/networks/rad-test-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-06-16T04:37:02.825-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/terraform-316615/regions/europe-west1/subnetworks/rad-test-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "rad-test-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-316615/global/networks/rad-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-316615",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-316615/regions/europe-west1/subnetworks/rad-test-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}